--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-fastapi
-uvicorn
-requests
-pandas
-openpyxl
-redis
-python-dotenv
-python-dateutil
-pytest
-pytest-mock
-pytest-cov
-httpx
-ruff
-pre-commit
-structlog
-prometheus-client
-pyyaml
-pydantic-settings
+fastapi==0.124.0
+uvicorn==0.38.0
+requests==2.32.5
+pandas==2.3.3
+openpyxl==3.1.5
+redis==7.1.0
+python-dotenv==1.2.1
+python-dateutil==2.9.0.post0
+pytest==9.0.2
+pytest-mock==3.15.1
+pytest-cov==7.0.0
+httpx==0.28.1
+ruff==0.14.8
+pre-commit==4.5.0
+structlog==25.5.0
+prometheus-client==0.23.1
+pyyaml==6.0.3
+pydantic-settings==2.12.0
